@@ -29,7 +29,7 @@ uint64 getmask(void)
 void
 testTortureExecute (void)
 {
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
     uint64 f = getmask();
     if (sizeof (long long) == 8
 	&& f != bigconst) ASSERT (0);
