@@ -12,8 +12,8 @@
 void
 testTortureExecute (void)
 {
-// TODO: Enable when more ports support long long!
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+// TODO: Enable as more ports support long long!
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   unsigned long long a;
   if (! (a = 0xfedcba9876543210ULL))
     ASSERT (0);
