@@ -35,7 +35,6 @@ testTortureExecute (void)
 {
 #ifndef __SDCC_s08
 #ifndef __SDCC_hc08
-#ifndef __SDCC_ds390
   if (f1 (0xf0000000) != 0xffffffff00000000)
     ASSERT (0);
   if (f2 (0xf0000000) != 0xf00000000)
@@ -45,7 +44,6 @@ testTortureExecute (void)
   if (f4 (0xf0000000) != 0xffffffff00000000)
     ASSERT (0);
   return;
-#endif
 #endif
 #endif
 }
